<resources>
    <string name="app_name">CabRentals</string>
    <string name="for_renting_cars">For Renting Cars</string>
    <string name="cabrentals">CabRentals</string>
    <string name="for_renting_car">for_renting_cars.</string>
    <string name="sign_in_using_phone_number">Sign In Using Phone Number</string>
    <string name="sign_in_using_google" />
    <string name="sign_in_using_google_">Sign In Using Google</string>
    <string name="cabrentalsreg">CabRentals</string>
    <string name="for_cab_rentals">For Cab Rentals</string>
    <string name="register">Register :</string>
    <string name="first_name">FIrst Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_id">Email_id</string>
    <string name="registerbtn">Register</string>
    <string name="title_activity_driver_home">DriverHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_maps">Map</string>
</resources>