<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/registration_picture_new">

    <TextView
        android:id="@+id/Signheader"
        android:layout_width="306dp"
        android:layout_height="52dp"
        android:layout_marginStart="69dp"
        android:layout_marginLeft="69dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="69dp"
        android:layout_marginRight="69dp"
        android:layout_marginBottom="622dp"
        android:fontFamily="@font/alfa_slab_one"
        android:importantForAutofill="no"
        android:text="@string/cabrentals"
        android:textAllCaps="true"
        android:textColor="#0B1860"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Caption"
        android:layout_width="347dp"
        android:layout_height="45dp"
        android:layout_marginStart="53dp"
        android:layout_marginLeft="53dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="564dp"
        android:text="@string/for_renting_car"
        android:textAllCaps="true"
        android:textColor="#013957"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Signheader" />

    <Button
        android:id="@+id/signphone"
        android:layout_width="260dp"
        android:layout_height="55dp"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="416dp"
        android:layout_marginEnd="88dp"
        android:layout_marginRight="88dp"
        android:layout_marginBottom="91dp"
        android:drawableStart="@drawable/ic_baseline_phone_24"
        android:drawableLeft="@drawable/ic_baseline_phone_24"
        android:text="@string/sign_in_using_phone_number"
        android:textColor="#050000"
        android:textStyle="bold"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Caption" />

    <Button
        android:id="@+id/signgoogle"
        android:layout_width="260dp"
        android:layout_height="55dp"
        android:layout_marginStart="89dp"
        android:layout_marginLeft="89dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="89dp"
        android:layout_marginRight="89dp"
        android:layout_marginBottom="8dp"
        android:drawableStart="@drawable/fui_ic_googleg_color_24dp"
        android:drawableLeft="@drawable/fui_ic_googleg_color_24dp"
        android:text="@string/sign_in_using_google_"
        android:textColor="#050000"
        android:textStyle="bold"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Caption"
        app:layout_constraintVertical_bias="0.944" />


</androidx.constraintlayout.widget.ConstraintLayout>